[tool.poetry]
name = "tap-mongodb"
version = "2.2.2"
description = "`tap-mongodb` is a Singer tap for MongoDB and AWS DocumentDB, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Matt Menzenski"]
keywords = [
    "ELT",
    "mongodb",
]
license = "Apache 2.0"
packages = [
    { include = "tap_mongodb" },
]

[tool.poetry.dependencies]
python = "<3.12,>=3.7.2"
singer-sdk = { version = "^0.30.0" }
fs-s3fs = { version = "^1.1.1", optional = true }
pymongo = "^4.3.3"
"backports.cached-property" = { version = "^1.0.2" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^5.0.4"
darglint = "^1.8.1"
black = "^23.1.0"
pyupgrade = "^3.3.1"
mypy = "^1.0.0"
isort = "^5.11.5"
singer-sdk = { version = "^0.30.0", extras = ["testing"] }
pylint = "^3.0.0a6"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.poetry.scripts]
# CLI declaration
tap-mongodb = 'tap_mongodb.tap:TapMongoDB.cli'

[tool.yamlfix]
comments_min_spaces_from_content = 2
comments_require_starting_space = true
explicit_start = false
sequence_style = 'block_style'
indent_mapping = 2
indent_offset = 2
indent_sequence = 4
line_length = 180
quote_basic_values = false
quote_keys_and_basic_values = false

[tool.ruff]
select = [
    "E",
    "F",
    "RUF",
    "I001",
]
exclude = [
    ".meltano",
    ".secrets",
    "output",
]
line-length = 120
target-version = "py311"

[tool.ruff.isort]
known-third-party = [
    "pymongo",
    "singer_sdk",
    "pendulum",
]

[tool.pylint]
max-line-length = 120

disable = [
    "logging-fstring-interpolation"
]
