[build-system]
requires = [
    "hatchling>=1.27,<2",
    "hatch-vcs>=0.5.0,<1",
]
build-backend = "hatchling.build"

[project]
name = "tap-mongodb"
dynamic = [ "version" ]
description = "Singer tap for MongoDB and AWS DocumentDB, built with the Meltano Singer SDK."
authors = [{ name = "Matt Menzenski" }]
maintainers = [{ name = "Meltano Labs" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
license-files = [ "LICENSE" ]
keywords = [
    "ELT",
    "mongodb",
]
dependencies = [
    "singer-sdk~=0.52.5",
    "pymongo~=4.15.4",
]

[project.optional-dependencies]
s3 = ["s3fs>=2025.10.0"]

[project.scripts]
tap-mongodb = "tap_mongodb.tap:TapMongoDB.cli"

[dependency-groups]
dev = [
    "faker>=38",
    "mypy>=1.0.0",
    "pytest>=9",
    "singer-sdk[testing]",
    "ruff>=0.14.5",
]

[tool.hatch.build.targets.sdist]
include = ["tap_mongodb", "tests"]

[tool.hatch.build.targets.wheel]
include = ["tap_mongodb"]

[tool.hatch.version]
fallback-version = "2.5.0"
source = "vcs"

[tool.mypy]
warn_unused_configs = true

[tool.yamlfix]
comments_min_spaces_from_content = 2
comments_require_starting_space = true
explicit_start = false
sequence_style = 'block_style'
indent_mapping = 2
indent_offset = 2
indent_sequence = 4
line_length = 180
quote_basic_values = false
quote_keys_and_basic_values = false

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "A",
    "B",
    "C4",
    "E",
    "F",
    "FURB",
    "G",
    "I",
    "LOG",
    "PERF",
    "RUF",
    "S",
    "TC",
    "UP",
]
exclude = [
    ".meltano",
    ".secrets",
    "output",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S101"]

[tool.ruff.lint.isort]
known-third-party = [
    "pymongo",
    "singer_sdk",
]

[tool.pytest]
minversion = "9.0"
addopts = [
    "-v",
]
